Commit 2: lenguaje.html y modificación de los títulos de cabecera

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratorio 06</title>
+    <title>Laboratorio 06 - Formularios | Inicio</title>
 </head>
 <body>
     <header>
         <h1>Formularios</h1>
         <nav>
-            <p>Páginas relacionadas:</p>
+            <p>Menú de navegación:</p>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="registro.html">Registro</a></li>
