Creación de validacion.html y mejoras en la apariencia de los form en las demás páginas

--- a/registro.html
+++ b/registro.html
@@ -22,24 +22,27 @@
     <hr><br>
 
     <main>
-        <form action="#" method="post">
-            <fieldset>
-                <label for="nombre">Nombre completo:</label> <!-- Para el nombre -->
-                <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre">
-                <br><br>
-                <label for="correo">Correo electrónico</label> <!-- Para el email -->
-                <input type="email" name="correo" id="correo" placeholder="Escribe tu correo electrónico">
-                <br><br>
-                <label for="acepto"> <!-- Para aceptar o no S-->
-                    <input type="checkbox" name="acepto">
-                    Acepto recibir correos promocionales
-                </label>
-                <br><br>
-        
-                <button type="submit">Suscribirse</button>
-                <button type="submit">Resetear formularios</button>
-            </fieldset>
-        </form>
+        <fieldset>
+            <legend>Formulario de registro</legend>
+            <form action="#" method="post">
+                <fieldset>
+                    <label for="nombre">Nombre completo:</label> <!-- Para el nombre -->
+                    <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre">
+                    <br><br>
+                    <label for="correo">Correo electrónico</label> <!-- Para el email -->
+                    <input type="email" name="correo" id="correo" placeholder="Escribe tu correo electrónico">
+                    <br><br>
+                    <label for="acepto"> <!-- Para aceptar o no S-->
+                        <input type="checkbox" name="acepto">
+                        Acepto recibir correos promocionales
+                    </label>
+                    <br><br>
+            
+                    <button type="submit">Suscribirse</button>
+                    <button type="submit">Resetear formularios</button>
+                </fieldset>
+            </form>
+        </fieldset>
     </main>
 </body>
 </html>
